--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="Help">Help</string>
     <string name="Spellbook">Spellbook</string>
     <string name="Exit">Exit</string>
+    <!-- ClientWaitingActivity -->
+    <string name="client_waiting">Waiting for client...</string>
 </resources>
