Some refactor and fix #12

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="Create_game">Create game</string>
     <string name="Join_game">Join game</string>
     <string name="Connect">Connect</string>
-    <string name="Help">Help</string>
+    <string name="Tutorial">Tutorial</string>
     <string name="Spellbook">Spellbook</string>
     <string name="settings">Settings</string>
     <string name="Exit">Exit</string>
