--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Wizard Fight</string>
     <!--  Preferences -->
     <string name="recognition_type">Recognition type</string>
+    <string name="recognition_type_summary">Select recognition type</string>
     <!--  BluetoothService -->
     <string name="not_connected">You are not connected to a device</string>
     <string name="bt_not_enabled">Bluetooth is not enabled. </string>
