add en/rus language support due to locale

--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -18,11 +18,12 @@
     <string name="title_other_devices">Other Available Devices</string>
     <string name="button_scan">Scan for devices</string>
     <!--  Main Menu -->
-    <string name="Create_game">Create game</string>
-    <string name="Join_game">Join game</string>
+    <string name="create_game">Create game</string>
+    <string name="join_game">Join game</string>
+    <string name="training">Training</string>
     <string name="Connect">Connect</string>
-    <string name="Tutorial">Tutorial</string>
-    <string name="Spellbook">Spellbook</string>
+    <string name="tutorial">Tutorial</string>
+    <string name="spellbook">Spellbook</string>
     <string name="settings">Settings</string>
     <string name="exit">Exit</string>
     <!--  Bt Fight Activity -->
