--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -43,11 +43,12 @@
     <string name="connect">Connect</string>
     <string name="disconnect">Disconnect</string>
     <string name="show_settings">Show settings</string>
-    <string name="net_name">Net name:&#160;</string>
+    <string name="net_name">Net name</string>
     <string name="pc_conn_fail">Unable to connect</string>
 	<string name="pc_conn_established">Connection to PC: established</string>
 	<string name="pc_conn_not_established">Connection to PC: not established</string>
-	<string name="no_network_conn">No network connection</string>
+	<string name="no_network_conn">No connection</string>
+    <string name="no_network_conn2">Please connect to the WIFI network</string>
 	<string name="disabled">disabled</string>
 	<string name="enabled">enabled</string>
 	
