--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -5,6 +5,9 @@
     <!--  Preferences -->
     <string name="recognition_type">Тип распознавания</string>
     <string name="recognition_type_summary">Выбрать тип распознавания</string>
+    <string name="player_name">Имя игрока</string>
+    <string name="player_name_summary">Укажите имя игрока для ПК-соединения</string>
+    <string name="wizard">Волшебник</string>
     <!--  BluetoothService -->
     <string name="not_connected">Вы не подсоединены к устройству</string>
     <string name="bt_not_enabled">Bluetooth выключен.</string>
