--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -14,9 +14,9 @@
     <!--  DeviceListActivity -->
     <string name="bt_not_available">Bluetooth недоступен</string>
     <string name="scanning">Поиск устройств…</string>
-    <string name="select_device">Выбрать устройство для подключения</string>
-    <string name="none_paired">Устройства не сопряжены</string>
-    <string name="none_found">Устройства не найдены</string>
+    <string name="select_device">Выберите устройство</string>
+    <string name="none_paired">   Нет сопряженных устройств</string>
+    <string name="none_found">Другие устройства не найдены</string>
     <string name="title_paired_devices">Сопряженные устройства</string>
     <string name="title_other_devices">Другие доступные устройства</string>
     <string name="button_scan">Поиск устройств</string>
