--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="player_name_summary">Choose player name for PC connection</string>
     <string name="wizard">Wizard</string>
     <!--  BluetoothService -->
-    <string name="not_connected">You are not connected to a device</string>
     <string name="bt_not_enabled">Bluetooth is not enabled. </string>
     <!--  DeviceListActivity -->
     <string name="bt_not_available">Bluetooth is not available</string>
@@ -28,7 +27,7 @@
     <string name="settings">Settings</string>
     <string name="exit">Exit</string>
     <!--  Bt Fight Activity -->
-    <string name="creating_the_game">Creating the game...</string>
+    <string name="creating_the_game">Creating the game…</string>
     <string name="connected_to">Connected to&#160;</string>
     <string name="client_waiting">Waiting for opponent…</string>
     <string name="trying_to_connect">Trying to connect..</string>
