First steps into google services

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -56,5 +56,6 @@
     <string name="no_network_conn2">Пожалуйста,  подключитесь к WIFI сети</string>
 	<string name="disabled">отключен</string>
 	<string name="enabled">включен</string>
+    <string name="achievements">Достижения</string>
 
 </resources>
